# ink-chain-extensions-demo

./: Cargo.toml  zombienet.toml
chain-extensions/: Cargo.toml
chain-extensions/src/: lib.rs
contract/: Cargo.toml  chain_extensions.rs  environment.rs  lib.rs
node/src/: service.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/configs/: contracts.rs  mod.rs  nfts.rs
runtime/src/configs/contracts/: chain_extensions.rs
