[package]
name = "my-chain-extensions"
version = "0.1.0"
authors.workspace = true
description = "Parachain chain extensions example"
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
log.workspace = true

pallet-contracts.workspace = true
pallet-nfts.workspace = true
sp-runtime.workspace = true

[features]
default = ["std"]
std = ["pallet-contracts/std", "pallet-nfts/std", "sp-runtime/std"]
